# eeg

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: base.yaml  model1_linear.yaml  model2_fir.yaml  model3_conv.yaml
docs/: Makefile
models/: iter008_subject_finetune.py  iter009_fir_real.py  iter010_deep_temporal.py  iter011_channel_dropout.py  iter012_ensemble.py  iter013_band_specific.py  iter014_lw_long_fir.py  iter015_correlation_loss.py  iter016_residual_fir.py  iter017_corr_val.py  iter018_euclidean_align.py  iter019_swa_combined.py  iter020_instance_norm_fir.py  iter021_mixture_of_experts.py  iter022_transformer.py  iter023_channel_transformer.py  iter024_mixup_inorm.py  iter025_cosine_loss_schedule.py  iter026_noise_augment.py  iter027_pls_regression.py  iter028_huber_corr.py  iter029_tta.py  iter030_mixup_no_inorm.py  iter031_pure_corr.py  iter032_high_dropout.py  iter033_tta_clean.py  iter034_cca_ridge.py  iter035_ledoit_wolf.py  iter036_acausal_ridge.py  iter037_gemma_eeg.py  iter038_broadband_fir.py  iter039_deep_broadband.py  iter040_biot_finetune.py  iter041_subject_adapt.py  iter042_euclidean_align.py  iter043_ensemble.py  iter044_residual_cf.py  iter045_long_context.py  iter046_calibrated.py  iter047_spatial_pe.py  (+33 more)
notebooks/: analysis.ipynb
results/: scaling_law.json  subject_valuation.json
scripts/: ablation.py  analyze_generalization.py  autoresearch.sh  benchmark.py  benchmark_broadband.py  benchmark_broadband_46ch.py  benchmark_loso_full.py  cross_subject.py  download_hbn_batch.sh  electrode_selection.py  generate_figures.py  (+20 more)
(+133 files in other folders)
